<resources>
    <string name="app_name">Catalogue Movie 245</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_notification">Notification</string>
    <string name="err_load_failed">Failed connect to data.Please check your Internet Connections !</string>
    <string name="key_reminder_daily">reminder_daily</string>
    <string name="key_reminder_upcoming">reminder_upcoming</string>
    <string name="key_setting_locale">setting_locale</string>
    <string name="label_now_playing">Now Playing</string>
    <string name="label_upcoming">Upcoming</string>
    <string name="label_favorite">Favorite</string>
    <string name="label_release_date">Release Date</string>
    <string name="label_vote">Vote Average:</string>
    <string name="label_genres">Movie Genres</string>
    <string name="label_overview">Overview</string>
    <string name="label_production_details">Production Details</string>
    <string name="label_belongs">Belongs To Collection</string>
    <string name="label_budget">Budget</string>
    <string name="label_revenue">Revenue</string>
    <string name="label_companies">Companies</string>
    <string name="label_countries">Countries</string>
    <string name="label_detail">Detail</string>
    <string name="label_share">Share</string>
    <string name="label_setting_menu">Setting</string>
    <string name="label_preferences">Preferences</string>
    <string name="label_search">Search By Movie Title</string>
    <string name="label_search_text">Search</string>
    <string name="label_daily_reminder">Daily Reminder Notification Is Now</string>
    <string name="label_upcoming_reminder">Upcoming Reminder Notification Is Now </string>
    <string name="label_activated">Activated ! </string>
    <string name="label_deactivated">Deactivated ! </string>
    <string name="label_daily_reminder_title">Daily Reminder Notification</string>
    <string name="label_daily_reminder_summary">Turn On/Off Daily Reminder</string>
    <string name="label_upcoming_reminder_title">Upcoming Reminder Notification</string>
    <string name="label_upcoming_reminder_summary">Turn On/Off Upcoming Reminder</string>
    <string name="label_setting_locale_title">Setting Locale</string>
    <string name="label_setting_locale_summary">Change Your Phone Localization</string>
    <string name="label_alarm_daily_reminder">Hi ?!  Get Ready to pick your new movies today ? </string>
    <string name="share_description">Share Our Apps</string>
    <string name="cv_save">You Add This Movie</string>
    <string name="cv_remove">This Movie Has Been Removed From Favorite List !</string>
    <string name="appwidget_text">Favorite Movies</string>
    <string name="add_widget">Add Widget</string>
    <string name="empty_text">You Dont Have Favorite Movies Yet</string>
</resources>
